[gd_scene load_steps=11 format=3 uid="uid://cxdkejps471t0"]

[ext_resource type="Script" path="res://scripts/level_3.gd" id="1_7ekim"]
[ext_resource type="PackedScene" uid="uid://bhsmb7jj5wemw" path="res://scenes/levels/level_4.tscn" id="2_8hlsp"]
[ext_resource type="PackedScene" uid="uid://busjvgjgilmp3" path="res://scenes/components/game_borders.tscn" id="3_pron7"]
[ext_resource type="PackedScene" uid="uid://kg54s01ginlu" path="res://scenes/components/chest.tscn" id="4_6hma2"]
[ext_resource type="PackedScene" uid="uid://c2qevafp5drm4" path="res://scenes/components/exit_area.tscn" id="4_li5pv"]
[ext_resource type="PackedScene" uid="uid://jqcaoee85fv4" path="res://scenes/components/activation_plate.tscn" id="5_nysjx"]
[ext_resource type="PackedScene" uid="uid://bi5deb2iy8e4l" path="res://scenes/components/laser_beam.tscn" id="6_jyctf"]
[ext_resource type="Texture2D" uid="uid://3ted24g1yntk" path="res://assets/img/tile_map_unit_18px.png" id="10_svtjl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4j0e2"]
texture = ExtResource("10_svtjl")
texture_region_size = Vector2i(18, 18)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.875, -7.875, 7.875, -7.875, 7.875, 7.875, -7.875, 7.875)

[sub_resource type="TileSet" id="TileSet_f2ywq"]
tile_size = Vector2i(18, 18)
physics_layer_0/collision_layer = 8
physics_layer_0/collision_mask = 7
sources/0 = SubResource("TileSetAtlasSource_4j0e2")

[node name="Level3" type="Node2D"]
script = ExtResource("1_7ekim")
next_level = ExtResource("2_8hlsp")

[node name="Objects" type="Node2D" parent="."]

[node name="ActivationPlate" parent="Objects" instance=ExtResource("5_nysjx")]
position = Vector2(207, 60)

[node name="ActivationPlate2" parent="Objects" instance=ExtResource("5_nysjx")]
position = Vector2(231, 60)

[node name="ActivationPlate3" parent="Objects" instance=ExtResource("5_nysjx")]
position = Vector2(255, 60)

[node name="ActivationPlate4" parent="Objects" instance=ExtResource("5_nysjx")]
position = Vector2(279, 60)

[node name="Chest" parent="Objects" instance=ExtResource("4_6hma2")]
position = Vector2(70, 87)

[node name="Chest2" parent="Objects" instance=ExtResource("4_6hma2")]
position = Vector2(70, 123)

[node name="Chest3" parent="Objects" instance=ExtResource("4_6hma2")]
position = Vector2(70, 159)

[node name="Chest4" parent="Objects" instance=ExtResource("4_6hma2")]
position = Vector2(70, 195)

[node name="Chest6" parent="Objects" instance=ExtResource("4_6hma2")]
position = Vector2(70, 231)

[node name="LaserBeam" parent="Objects" instance=ExtResource("6_jyctf")]
position = Vector2(276, 285)

[node name="Map" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Map"]
texture_filter = 1
position = Vector2(51, 51)
tile_set = SubResource("TileSet_f2ywq")
format = 2
layer_0/tile_data = PackedInt32Array(196609, 0, 1, 327681, 0, 1, 458753, 0, 1, 589825, 0, 1, 720897, 0, 1, 917518, 524288, 1, 851969, 0, 1, 65537, 0, 1, 851982, 0, 1, 917516, 196608, 0, 720908, 196608, 1, 720909, 327680, 1, 720910, 327680, 1, 720905, 131072, 0, 786441, 131072, 1, 786440, 65536, 1, 720904, 65536, 0, 524296, 0, 1, 262148, 196608, 1, 262149, 327680, 1, 262150, 327680, 1, 262151, 262144, 1, 393220, 196608, 1, 393221, 327680, 1, 393222, 327680, 1, 393223, 262144, 1, 589828, 65536, 0, 589829, 393216, 0, 589830, 131072, 0, 655364, 393216, 1, 655365, 524288, 0, 655366, 458752, 1, 131076, 65536, 1, 131077, 458752, 0, 131078, 458752, 0, 131079, 131072, 1, 65543, 458752, 1, 65542, 524288, 0, 65541, 524288, 0, 65540, 393216, 1, 4, 393216, 1, 5, 524288, 0, 6, 524288, 0, 7, 458752, 1, 262155, 327680, 1, 262156, 262144, 1, 14, 65536, 1, 393227, 65536, 0, 458763, 393216, 1, 524299, 393216, 1, 589835, 65536, 1, 393228, 131072, 0, 458764, 458752, 1, 524300, 458752, 1, 589836, 131072, 1, 917508, 393216, 1, 851972, 393216, 1, 786436, 393216, 1, 720900, 393216, 1, 720901, 524288, 0, 786437, 524288, 0, 851973, 524288, 0, 917509, 524288, 0, 917510, 458752, 1, 851974, 458752, 1, 786438, 458752, 1, 720902, 458752, 1, 262154, 196608, 1)

[node name="GameBorders" parent="Map" instance=ExtResource("3_pron7")]

[node name="ExitArea" parent="Map" instance=ExtResource("4_li5pv")]
position = Vector2(312, 312)

[connection signal="chest_outside" from="Objects/ActivationPlate" to="." method="_on_activation_plate_chest_outside"]
[connection signal="chest_touch" from="Objects/ActivationPlate" to="." method="_on_activation_plate_chest_touch"]
[connection signal="chest_outside" from="Objects/ActivationPlate2" to="." method="_on_activation_plate_2_chest_outside"]
[connection signal="chest_touch" from="Objects/ActivationPlate2" to="." method="_on_activation_plate_2_chest_touch"]
[connection signal="chest_outside" from="Objects/ActivationPlate3" to="." method="_on_activation_plate_3_chest_outside"]
[connection signal="chest_touch" from="Objects/ActivationPlate3" to="." method="_on_activation_plate_3_chest_touch"]
[connection signal="chest_outside" from="Objects/ActivationPlate4" to="." method="_on_activation_plate_4_chest_outside"]
[connection signal="chest_touch" from="Objects/ActivationPlate4" to="." method="_on_activation_plate_4_chest_touch"]
